--- a/Partials/navbar.html
+++ b/Partials/navbar.html
@@ -23,7 +23,7 @@
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="loans.html">Agricultural Loans</a></li>
                         <li><a class="dropdown-item" href="marketplace.html">Digital Marketplace</a></li>
-                        <li><a class="dropdown-item" href="price-prediction.html">AI Price Prediction</a></li>
+                        <li><a class="dropdown-item" href="priceprediction.html">AI Price Prediction</a></li>
                         <li><a class="dropdown-item" href="logistics.html">Logistics Support</a></li>
                     </ul>
                 </li>
